# linux-audio-plugins

Reasonus-Native-development/src/csurf_faderport_8/: csurf_fp_8_channel_manager.hpp  csurf_fp_8_fader_manager.cpp  csurf_fp_8_main.cpp  csurf_fp_8_mix_manager.cpp
Reasonus-Native-development/src/shared/: csurf_utils.hpp
dpsv55/: CMakeLists.txt
dpsv55/Source/: DpsV55Effects.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
pitchedit/: CMakeLists.txt  README.md  build.sh
pitchedit/Source/: ARADocumentController.cpp  ARADocumentController.h  NoteCanvas.cpp  NoteCanvas.h  NoteData.h  NoteSegmenter.cpp  NoteSegmenter.h  PhaseVocoder.cpp  PhaseVocoder.h  PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
